--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.3",
     "mongo-connect": "^0.0.6",
     "mongoose": "^6.0.0",
+    "multer": "^1.4.5-lts.1",
     "node-sass": "^9.0.0",
     "nodemailer": "^6.9.3",
     "nodemon": "^3.0.1",
