--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "mongoose": "^6.0.0",
     "multer": "^1.4.5-lts.1",
     "node-sass": "^9.0.0",
-    "sass-middleware": "^0.0.3",
+    "node-sass-middleware": "^1.0.1",
     "nodemailer": "^6.9.3",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
